@@ -1,4 +1,4 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1.1.1 2004/06/27 21:33:23 abs Exp $
 
-SHA1 (cambevao-2.0.tar.gz) = 3ad8a3ddd7b05ee5142a13e08b20c06b0ca1616f
-Size (cambevao-2.0.tar.gz) = 33817 bytes
+SHA1 (cambevao-2.2.tar.gz) = 98d67a1e8e79cdb5b3cc8b099065f90c2c204b36
+Size (cambevao-2.2.tar.gz) = 158557 bytes
